apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  selector:
    app: apache
  ports:
  - protocol: TCP
    port: 80      
    targetPort: 80    
    nodePort: 30001   
  type: NodePort
